V.Next
---------
- [PATCH] Handle Receiver Callback Exception in CommandDispatcher interactive command (#2305)
- [MINOR] Add IpcStrategyWithBackup (#2301)
- [PATCH] Fix MSAL Issue 1864 (#2280)
- [MINOR] Add AccountManagerBackupIpcStrategyTargetingSpecificBrokerApp (#2294)
- [MINOR] Adding additional fields to JwtRequestBody for sending PRTv4 requests (#2289)
- [MINOR] Update SignIn/Signup parameters classes for Native Auth(#2284)
- [MINOR] Add IsQrPinAvailableCommand, controllers behavior and define constants for the isQrAvailable API (#2219)
- [MINOR] Add PreferredAuthMethod to interactive token flow (#2245)
- [MINOR] Implement updates of the native auth web API (#2261)
- [MINOR] Update ResetPasswordPollCompletion related command, results, and responses to support signing in a user after a successful password reset. (#2281)
- [PATCH] Create consistent use of correlation ID throughout a user flow (#2283)
- [MINOR] Added support for setting no log level (#2282)
- [MINOR] Redirect to hub app in case of NAA flow (#2290)
- [MINOR] Changes to support app based targeting of telemetry sampling rate (#2302)
- [MINOR] Adding base64Url encoding method (#2303)

v.17.0.1
---------
- [PATCH] Update robolectricVersion 4.11.1 (#2292)
- [PATCH] Removing CredMan (Only for 17.0.1) (#2295)

V.17.0.0
---------
- [PATCH] Add JWT header field for KDF version (#2220)
- [MINOR] Catch unknown Keystore errors during decryption (#2255)
- [MINOR] AuthFidoChallengeHandler and other passkey changes (#2146)
- [MAJOR] Addition of Credential Manager and associated passkey logic (#2267)
- [PATCH] Pass through ESTS x-ms-srs header field (#2256)

V.16.3.0
----------
- [MINOR] Changes to launch AEA app from Broker's WebView (#2264)

V.16.2.0
----------
- [PATCH] always make a copy of bundle before modifying & sending out via ipc (#2239)
- [PATCH] Use v2.0 url for OpenID Client (#2208)
- [MINOR] Added passkey protocol header (behind a flag) (#2181)
- [MINOR] Fix crash during onCreate() (#2202)